@@ -6,7 +6,7 @@
 <script src="popup.js"></script>
 </head>
   <body>
-    <div><button id="execute">Excute</button></div>
+    <div><button id="execute">Execute</button></div>
     <div>
       <h1>Main</h1>
       <div id="main-body">
@@ -34,6 +34,7 @@
     <div>
       <h1><label><input type="checkbox" id="context">Context</label></h1>
       <div id="context-body">
+        <div>The first node of the results is used as the CONTEXT. (document.evaluate(expr, CONTEXT, ...), CONTEXT.querySelector(...), CONTEXT.querySelectorAll(...))</div>
         <div>
           <label>Way 
             <select id="context-way">
@@ -50,6 +51,19 @@
           </label>
         </div>
         <div><label>Expression <input type="text" id="context-expression"></label></div>
+      </div>
+    </div>
+    <div>
+      <h1><label><input type="checkbox" id="resolver">namespaceResolver</label></h1>
+      <div id="resolver-body">
+        <div>You can specify the behavior of the namespaceResolver function. If you want to get the P elements which are in the "http://www.w3.org/1999/xhtml" namespace, please do as follows.
+          <ol>
+            <li>Enter {"x":"http://www.w3.org/1999/xhtml"} in the resolver input field.</li>
+            <li>Enter //x:p in the expression input field.</li>
+            <li>Click execute button.</li>
+          </ol>
+        </div>
+        <div><label>Resolver <input type="text" id="resolver-expression"></label></div>
       </div>
     </div>
     <hr />
