@@ -5,7 +5,7 @@
     var document = window.document;
 
     var mainWay, mainExpression, contextCheckbox, contextWay,
-        contextExpression;
+        contextExpression, resolverCheckbox, resolverExpression;
 
     function sendToActiveTab(msg) {
         chrome.tabs.query({ "active": true, "currentWindow": true },
@@ -18,12 +18,19 @@
         var msg = Object.create(null);
         msg.event = "execute";
 
+        var resol;
+        if (resolverCheckbox.checked) {
+            resol = resolverExpression.value;
+        } else {
+            resol = null;
+        }
+
         var way = mainWay.selectedOptions[0];
         msg.main = Object.create(null);
         msg.main.expression = mainExpression.value;
         msg.main.method = way.getAttribute("data-method");
         msg.main.resultType = way.getAttribute("data-type");
-        msg.main.resolver = getResolver();
+        msg.main.resolver = resol;
 
         if (contextCheckbox.checked) {
             let way = contextWay.selectedOptions[0];
@@ -31,14 +38,10 @@
             msg.context.expression = contextExpression.value;
             msg.context.method = way.getAttribute("data-method");
             msg.context.resultType = way.getAttribute("data-type");
-            msg.context.resolver = getResolver();
+            msg.context.resolver = resol;
         }
 
         return msg;
-    };
-
-    function getResolver() {
-        return null;
     };
 
     function genericListener(message, sender, sendResponse) {
@@ -66,6 +69,8 @@
         contextCheckbox = document.getElementById("context");
         contextWay = document.getElementById("context-way");
         contextExpression = document.getElementById("context-expression");
+        resolverCheckbox = document.getElementById("resolver");
+        resolverExpression = document.getElementById("resolver-expression");
 
         document.getElementById("execute")
             .addEventListener("click", function() {
